--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
         <div class="half-width container">
-            <div class="col-6"><img class="logo-img" src="icon/Logo.png" alt=""></div>
+            <div class="col-6"><img class="logo-img" src="ICON/Logo.png" alt=""></div>
             <h5>Are you ready to learn?</h5>
             <h1>Learn With fun on <span>any schedule</span> </h1>
             <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur debitis tenetur, aut placeat, labore accusamus sapiente corrupti necessitatibus quidem, adipisci ducimus deserunt. Atque maxime sit quos? Porro recusandae a nulla.</h5>
@@ -27,7 +27,7 @@
                 <button type="button" class="btn btn-success">Sing In</button>
             </div>
             <div>
-                <img id="second-img" src="photos/Illustration.png" alt="">
+                <img id="second-img" src="Photos/Illustration.png" alt="">
             </div>
 
         </div>
@@ -121,7 +121,7 @@
     <section class="container testimonial"> <!--testimonial-->
         <h1>Testimonial</h1>
         <div class="d-flex justify-content-center">
-            <img src="photos/Man.png" alt="">
+            <img src="Photos/Man.png" alt="">
             <h4>There are many variations of passages of Lorem Ipsum available, but the
     
                 majority have suffered alteration in some form, by injected humour, 
