--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
         <div class="half-width container">
-            <div class="col-6"><img class="logo-img" src="ICON/Logo.png" alt=""></div>
+            <div class="col-6"><img class="logo-img" src="icons/Logo.png"></div>
             <h5>Are you ready to learn?</h5>
             <h1>Learn With fun on <span>any schedule</span> </h1>
             <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur debitis tenetur, aut placeat, labore accusamus sapiente corrupti necessitatibus quidem, adipisci ducimus deserunt. Atque maxime sit quos? Porro recusandae a nulla.</h5>
@@ -27,7 +27,7 @@
                 <button type="button" class="btn btn-success">Sing In</button>
             </div>
             <div>
-                <img id="second-img" src="Photos/Illustration.png" alt="">
+                <img id="second-img" src="img/Illustration.png" alt="">
             </div>
 
         </div>
@@ -36,7 +36,7 @@
     <section class="container second-sec"> <!--2nd section-->
         <div class="card-deck">
             <div class="card">
-              <img src="ICON/book.png" class="card-img-top first-card-img" alt="...">
+              <img src="icons/book.png" class="card-img-top first-card-img" alt="...">
               <div class="card-body">
                 <h5 class="card-title">1500+ Topic</h5>
                 <p class="card-text">Learn Anythings</p>
@@ -44,7 +44,7 @@
               </div>
             </div>
             <div class="card ">
-              <img src="ICON/Student.png" class="card-img-top first-card-img" alt="...">
+              <img src="icons/Student.png" class="card-img-top first-card-img" alt="...">
               <div class="card-body">
                 <h5 class="card-title">1800+ Students</h5>
                 <p class="card-text">Learn Anythings</p>
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="card ">
-              <img src="ICON/Test.png" class="card-img-top first-card-img" alt="...">
+              <img src="icons/Test.png" class="card-img-top first-card-img" alt="...">
               <div class="card-body">
                 <h5 class="card-title">9K+ Test Token</h5>
                 <p class="card-text">Learn Anythings</p>
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="card ">
-                <img src="ICON/Students.png" class="card-img-top first-card-img" alt="...">
+                <img src="icons/Students.png" class="card-img-top first-card-img" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">2000+ Student</h5>
                   <p class="card-text">Learn Anythings</p>
@@ -79,36 +79,36 @@
         <h1>Online Course</h1>
         <div class="card-deck">
             <div class="card online-course-card">
-              <img src="Photos/Morder pyschology.png" class="card-img-top second-card-img" alt="...">
+              <img src="img/Morder pyschology.png" class="card-img-top second-card-img" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Modern Psychology</h5>
                 <p class="card-text">Designation</p>
                 <button type="button" class="btn btn-success online-course-button">Buy Course</button>
               </div>
               <div class="card-footer">
-                <small class="text-muted"><small class="text-muted "><img class="calander-image" src="icon/calendar.png" alt="">Start 20 April, 2021</small></small>
+                <small class="text-muted"><small class="text-muted "><img class="calander-image" src="icons/calendar.png" alt="">Start 20 April, 2021</small></small>
               </div>
             </div>
             <div class="card online-course-card">
-              <img src="Photos/Morder psyc.png" class="card-img-top second-card-img" alt="...">
+              <img src="img/Morder psyc.png" class="card-img-top second-card-img" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Modern Psychology</h5>
                 <p class="card-text">Designation</p>
                 <button type="button" class="btn btn-success online-course-button">Buy Course</button>
               </div>
               <div class="card-footer">
-                <small class="text-muted"><small class="text-muted "><img class="calander-image" src="icon/calendar.png" alt="">Start 20 April, 2021</small></small>
+                <small class="text-muted"><small class="text-muted "><img class="calander-image" src="icons/calendar.png" alt="">Start 20 April, 2021</small></small>
               </div>
             </div>
             <div class="card online-course-card">
-              <img src="Photos/Morder pychons.png" class="card-img-top second-card-img" alt="...">
+              <img src="img/Morder pychons.png" class="card-img-top second-card-img" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Modern Psychology</h5>
                 <p class="card-text">Designation</p>
                 <button type="button" class="btn btn-success online-course-button">Buy Course</button>
               </div>
               <div class="card-footer">
-                <small class="text-muted "><img class="calander-image" src="icon/calendar.png" alt="">Start 20 April, 2021</small>
+                <small class="text-muted "><img class="calander-image" src="icons/calendar.png" alt="">Start 20 April, 2021</small>
               </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
     <section class="container testimonial"> <!--testimonial-->
         <h1>Testimonial</h1>
         <div class="d-flex justify-content-center">
-            <img src="Photos/Man.png" alt="">
+            <img src="img/Man.png" alt="">
             <h4>There are many variations of passages of Lorem Ipsum available, but the
     
                 majority have suffered alteration in some form, by injected humour, 
